Fixed heavy H1 font weight on Firefox

--- a/styles.scss
+++ b/styles.scss
@@ -82,6 +82,7 @@ header {
         animation: title-enter 1.25s forwards;
         margin-left: 0.5em;
         margin-right: 0.5em;
+        font-weight: 400;
     }
     > h2 {
         animation: title-enter 1.25s forwards;
